--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,8 @@ flask-login==0.5.0
 flask-migrate==3.0.0
 flask-sqlalchemy==2.5.1
 flask-wtf==0.14.3
+gevent==21.1.2
+gunicorn==20.1.0
+psycopg2==2.8.6
 python-dotenv==0.17.1
+tweepy==3.10.0
