final before abandoned

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-REGISTER_TOKEN=please-edit-this
+REGISTER_TOKEN=
 # used to register on registration page
 
-SECRET_KEY=please-edit-this
+SECRET_KEY=
 # used by flask
 
 DATABASE_URL=
